test/src/e2e_vm_tests/test_programs/should_pass/language/associated_method/src/main.sw
script;

use std::chain::auth::*;
use std::identity::*;
use std::result::*;

fn dummy() -> Identity {
    let res = msg_sender();
    res.unwrap()
}

fn main() -> u64 {
    let identity = dummy();
    return 42;
}
