test/src/e2e_vm_tests/test_programs/should_fail/hash_str/src/main.sw
script;

use std::hash::*;

fn main() -> u64 {
    let _hash = sha256_str(0_u8);
    5
}
